--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": ">= 0.8.0"
   },
   "devDependencies": {
-    "bluebird": "~2.2.2",
-    "uglify"  : "~2.4.15"
+    "bluebird" : "~2.2.2",
+    "uglify-js": "~2.4.15"
   },
   "main":  "./lib/compile.js",
   "bin": { "Tcompile": "bin/compile" }
