--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
   "dependencies": {
     "bluebird": "~2.2.2",
     "uglify-js": "~2.4.15",
-    "jsdoc": "~3.3.0"
+    "jsdoc": "~3.3.0",
+	"handlebars": "~2.0.0"
+  },
+  "devDependencies": {
+	"jsdoc": "~3.3.0",
+	"handlebars": "~2.0.0"
   },
   "main":  "./lib/compile.js",
   "bin": { "tcompile": "bin/compile" }
