add handlebars template compiling support

--- a/lib/config.json
+++ b/lib/config.json
@@ -3,17 +3,18 @@
     "CRLF": "\r\n",
     "checkinAfterSave": false,
     "path": {
-        "project": "d:\\Users\\shiz\\Desktop\\T-compile\\test",
-        "docs": "d:\\Users\\shiz\\Desktop\\T-compile\\test\\docs",
-        "src": "d:\\Users\\shiz\\Desktop\\T-compile\\test\\src",
-        "min": "d:\\Users\\shiz\\Desktop\\T-compile\\test\\min",
-        "tools": "d:\\Users\\shiz\\Desktop\\T-compile\\test\\tools",
-        "mods": "d:\\Users\\shiz\\Desktop\\T-compile\\test\\mods"
+        "project": "d:\\Users\\shiz\\Desktop\\T-compile\\test"
     },
     "jsdoc": {
         "source": {
             "includePattern": ".+\\.js$",
             "excludePattern": "(^|\\/|\\\\)_|(docs|min)\\\\"
         }
+    },
+    "template": {
+        "name": "handlebars",
+        "partialExt": "partial.html",
+        "ext": "html",
+        "helperPath": ""
     }
 }
