exclude helpers.js when compiling the templates

--- a/lib/config.json
+++ b/lib/config.json
@@ -19,7 +19,6 @@
     "template": {
         "name": "handlebars",
         "partialExt": "partial.html",
-        "ext": "html",
-        "helperPath": "d:\\Users\\shiz\\Desktop\\T-compile\\test\\tools\\helpers.js"
+        "ext": "html"
     }
 }
