--- a/lib/config.json
+++ b/lib/config.json
@@ -3,11 +3,11 @@
     "CRLF": "\r\n",
     "checkinAfterSave": false,
     "path": {
-        "project": "d:\\Users\\shiz\\Desktop\\T-compile\\test",
-        "src": "d:\\Users\\shiz\\Desktop\\T-compile\\test\\src",
-        "min": "d:\\Users\\shiz\\Desktop\\T-compile\\test\\min",
-        "tools": "d:\\Users\\shiz\\Desktop\\T-compile\\test\\tools",
-        "mods": "d:\\Users\\shiz\\Desktop\\T-compile\\test\\mods",
+        "project": "D:\\TFS\\TFS_70\\TaoCan\\ResStatic\\Branches\\Code\\ResPackageOnline\\js",
+        "src": "D:\\TFS\\TFS_70\\TaoCan\\ResStatic\\Branches\\Code\\ResPackageOnline\\js\\src",
+        "min": "D:\\TFS\\TFS_70\\TaoCan\\ResStatic\\Branches\\Code\\ResPackageOnline\\js\\min",
+        "tools": "D:\\TFS\\TFS_70\\TaoCan\\ResStatic\\Branches\\Code\\ResPackageOnline\\js\\tools",
+        "mods": "D:\\TFS\\TFS_70\\TaoCan\\ResStatic\\Branches\\Code\\ResPackageOnline\\js\\mods",
         "docs": "d:\\Users\\shiz\\Desktop\\T-compile\\test\\docs"
     },
     "jsdoc": {
