compile files in turns

--- a/lib/config.json
+++ b/lib/config.json
@@ -8,7 +8,7 @@
         "min": "D:\\TFS\\TFS_70\\TaoCan\\ResStatic\\Branches\\Code\\ResPackageOnline\\js\\min",
         "tools": "D:\\TFS\\TFS_70\\TaoCan\\ResStatic\\Branches\\Code\\ResPackageOnline\\js\\tools",
         "mods": "D:\\TFS\\TFS_70\\TaoCan\\ResStatic\\Branches\\Code\\ResPackageOnline\\js\\mods",
-        "docs": "d:\\Users\\shiz\\Desktop\\T-compile\\test\\docs"
+        "docs": "D:\\TFS\\TFS_70\\TaoCan\\ResStatic\\Branches\\Code-Docs\\ResPackageOnline\\docs"
     },
     "jsdoc": {
         "source": {
