--- a/lib/config.json
+++ b/lib/config.json
@@ -1,13 +1,13 @@
 {
-    "mail": "lovely_dreamer@126.com",
+    "mail": "shiz@ctrip.com",
     "CRLF": "\r\n",
-    "checkinAfterSave": false,
+    "checkinAfterSave": true,
     "path": {
-        "project": "d:\\Users\\shiz\\Desktop\\T-compile\\test",
-        "src": "d:\\Users\\shiz\\Desktop\\T-compile\\test\\src",
-        "min": "d:\\Users\\shiz\\Desktop\\T-compile\\test\\min",
-        "tools": "d:\\Users\\shiz\\Desktop\\T-compile\\test\\tools",
-        "mods": "d:\\Users\\shiz\\Desktop\\T-compile\\test\\mods",
+        "project": "D:\\TFS\\TFS_70\\TaoCan\\ResStatic\\Branches\\Code\\ResPackageOnline\\js",
+        "src": "D:\\TFS\\TFS_70\\TaoCan\\ResStatic\\Branches\\Code\\ResPackageOnline\\js\\src",
+        "min": "D:\\TFS\\TFS_70\\TaoCan\\ResStatic\\Branches\\Code\\ResPackageOnline\\js\\min",
+        "tools": "D:\\TFS\\TFS_70\\TaoCan\\ResStatic\\Branches\\Code\\ResPackageOnline\\js\\tools",
+        "mods": "D:\\TFS\\TFS_70\\TaoCan\\ResStatic\\Branches\\Code\\ResPackageOnline\\js\\mods",
         "docs": "d:\\Users\\shiz\\Desktop\\T-compile\\test\\docs"
     },
     "projectConfig": {
